--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Hometask1 React</title>
     <script src="main.js"></script>
 </head>
 <body>
+<div class="container">
+    <button id="start">Заполнить анкету</button>
+</div>
 
 </body>
 </html>
